argocd/identity-server/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-server
  labels:
    app: identity-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity-server
  template:
    metadata:
      labels:
        app: identity-server
    spec:
      containers:
        - name: identity-server
          image: deepinchat/identity-server:89d446e18427deace50b5ceef68fd50d0a2cb831
          ports:
            - containerPort: 8080
            - containerPort: 8081
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "400m"
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
