argocd/identity-server/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-server
spec:
  type: ClusterIP
  selector:
    app: identity-server
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8081
