argocd/identity-server/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "<<PLACEHOLDER>>"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: identity-server
              port:
                number: 5000
